--- a/articles/azure-arc/kubernetes/index.yml
+++ b/articles/azure-arc/kubernetes/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/02/2021
   ms.author: shasb
-  ms.openlocfilehash: 2b0eb9bc6d0f410afcef5a56a87983d2b0232244
-  ms.sourcegitcommit: 860f6821bff59caefc71b50810949ceed1431510
+  ms.openlocfilehash: bfd815053d1e156620fc284df4d6dfea5f8fb166
+  ms.sourcegitcommit: 56235f8694cc5f88db3afcc8c27ce769ecf455b0
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 10/09/2021
-  ms.locfileid: "129707040"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133056702"
 landingContent:
 - title: Acerca de Kubernetes habilitado para Azure Arc
   linkLists:
@@ -26,8 +26,8 @@ landingContent:
       url: validation-program.md
   - linkListType: concept
     links:
-    - text: Arquitectura de agente
-      url: conceptual-agent-architecture.md
+    - text: Introducción al agente
+      url: conceptual-agent-overview.md
     - text: Configuraciones y GitOps
       url: conceptual-configurations.md
     - text: Flujo de trabajo de CI/CD mediante GitOps
