commit translated contents

--- a/articles/cognitive-services/language-service/toc.yml
+++ b/articles/cognitive-services/language-service/toc.yml
@@ -529,6 +529,8 @@ items:
             href: question-answering/how-to/manage-knowledge-base.md
           - name: Aislamiento de red y puntos de conexión privados
             href: question-answering/how-to/network-isolation.md
+          - name: Authoring API
+            href: question-answering/how-to/authoring.md
           - name: API pregenerada
             href: question-answering/how-to/prebuilt.md
           - name: Solución de problemas
