--- a/articles/resource-mover/toc.yml
+++ b/articles/resource-mover/toc.yml
@@ -26,6 +26,8 @@
       href: support-matrix-move-region-azure-vm.md
     - name: 'Soporte técnico: traslado de Azure SQL entre regiones'
       href: support-matrix-move-region-sql.md
+    - name: 'Soporte técnico: traslado de tipos de recursos de la extensión'
+      href: support-matrix-extension-resource-types.md
 - name: Guías de procedimientos
   items:
     - name: Traslado entre regiones
