--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -381,9 +381,12 @@
           href: howto-deploy-java-liberty-app.md
         - name: Uso de Azure API Management
           href: ../api-management/api-management-kubernetes.md
-        - name: Uso de Dapr (versión preliminar)
-          href: dapr.md
-          maintainContext: true
+        - name: Uso de Dapr
+          items:
+            - name: Introducción a Dapr
+              href: dapr-overview.md
+            - name: Uso de Dapr (versión preliminar)
+              href: dapr.md
     - name: Implementación del complemento Open Service Mesh de AKS
       items:
         - name: Acerca de Open Service Mesh
